# Agentic-AI-course

./: .gitignore  README.md  control_flow.ipynb  pyproject.toml
week_1/: basics.ipynb  readme.md
week_2/: README.md  assignment_1.md  assignment_2.md  assignment_2_solutions.py  assingment_2.md  calculate.py  class_assignment.md  control_flow.ipynb  example.txt  exception_handling_examples.py  file_handling_examples.py  main.py  user_information.py  user_information.txt
week_3/: clothes.py  encapsulation.py  exercises.md  inheritance.py  inheritance_project.py  oop.py  polymorphism.py  readme.md
week_3/project/: README.md  accounts.json  app.py  app2.py  pyproject.toml
week_3/tests/: run_tests.py
week_4/: README.md
week_5/: asyncr.py  blog_file_upload_api_project.md  decrator_practice.py  syncr.py
week_5/fastapi_practice/: CRUD.py  app.py  json_practice.py  main.py  project.md  pyproject.toml  schema.py  utitls.py
week_6/: RAG_1.ipynb  chunking_vector.ipynb  embedding_model.ipynb  main.py  pyproject.toml  vector_store.ipynb
week_7/: prompt_engineering.md
